tests/ixml_not_003_abb.test
START
hello = '_', ![L], ~[], ~[].
INPUT
_aa
OUTPUT
ixml(ixml:state = failed
     xmlns:ixml = http://invisiblexml.org/NS)
{
    info   = 'ixml:1:2: syntax error
              _aa
               ^'
    line   = 1
    column = 2
    pos    = 2
}
END
